@@ -5338,18 +5338,36 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 	   kill-buffer-query-functions)
       (unwind-protect
 	  (progn
-	    ;; We cannot use "/bin/true" and "/bin/false"; those paths
-	    ;; do not exist on MS Windows.
-	    (should (zerop (process-file "true")))
-	    (should-not (zerop (process-file "false")))
+	    ;; In the "smb" case, default-directory must have a share.
+	    (when (tramp--test-smb-p)
+	      (let ((default-directory
+		     (concat (file-remote-p default-directory) "/")))
+		(should-not
+		 (zerop (process-file "exit" nil nil nil "-not" "$true")))))
+	    (should
+	     (zerop
+	      (if (tramp--test-smb-p)
+		  ;; $true is converted to 1 in Powershell.
+		  (process-file "exit" nil nil nil "-not" "$true")
+		(process-file "true"))))
+	    (should-not
+	     (zerop
+	      (if (tramp--test-smb-p)
+		  ;; $false is converted to 0 in Powershell.
+		  (process-file "exit" nil nil nil "-not" "$false")
+		(process-file "false"))))
 	    (should-not (zerop (process-file "binary-does-not-exist")))
 	    ;; Return exit code.
-	    (should (= 42 (process-file
-			   (tramp--test-shell-file-name) nil nil nil
-			   (tramp--test-shell-command-switch) "exit 42")))
+	    ;; FIXME: Make it work with the shell also in the "smb" case.
+	    (should
+	     (= 42 (if (tramp--test-smb-p)
+		       (process-file "exit" nil nil nil "42")
+		     (process-file
+		      (tramp--test-shell-file-name) nil nil nil
+		      (tramp--test-shell-command-switch) "exit 42"))))
 	    ;; Return exit code in case the process is interrupted,
 	    ;; and there's no indication for a signal describing string.
-	    (unless (tramp--test-sshfs-p)
+	    (unless (or (tramp--test-sshfs-p) (tramp--test-smb-p))
 	      (let (process-file-return-signal-string)
 		(should
 		 (= (+ 128 2)
@@ -5358,7 +5376,7 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 		     (tramp--test-shell-command-switch) "kill -2 $$")))))
 	    ;; Return string in case the process is interrupted and
 	    ;; there's an indication for a signal describing string.
-	    (unless (tramp--test-sshfs-p)
+	    (unless (or (tramp--test-sshfs-p) (tramp--test-smb-p))
 	      (let ((process-file-return-signal-string t))
 		(should
 		 (string-match-p
@@ -5375,7 +5393,12 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 	      (with-temp-buffer
 		(write-region "foo" nil tmp-name)
 		(should (file-exists-p tmp-name))
-		(should (zerop (process-file "ls" nil destination nil fnnd)))
+		(should
+		 (zerop
+		  (if (tramp--test-smb-p)
+		      (process-file
+		       (format "(ls %s).Name" fnnd) nil destination)
+		    (process-file "ls" nil destination nil fnnd))))
 		(with-current-buffer
 		    (if (bufferp destination) destination (current-buffer))
 		  ;; "ls" could produce colorized output.
@@ -5390,7 +5413,12 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 		  (goto-char (point-max)))
 
 		;; Second run.  The output must be appended.
-		(should (zerop (process-file "ls" nil destination t fnnd)))
+		(should
+		 (zerop
+		  (if (tramp--test-smb-p)
+		      (process-file
+		       (format "(ls %s).Name" fnnd) nil destination t)
+		    (process-file "ls" nil destination t fnnd))))
 		(with-current-buffer
 		    (if (bufferp destination) destination (current-buffer))
 		  ;; "ls" could produce colorized output.
@@ -5416,7 +5444,9 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 		(write-region "foo" nil tmp-name)
 		(should (file-exists-p tmp-name))
 		(should (zerop (process-file "cat" tmp-name t)))
-		(should (string-equal "foo" (buffer-string)))
+		(should
+		 (string-equal
+		  (if (tramp--test-smb-p) "foo\n" "foo") (buffer-string)))
 		(should-not (get-buffer-window (current-buffer) t))
 		(delete-file tmp-name)))
 
@@ -5433,7 +5463,8 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 	    ;; 	(delete-file tmp-name)))
 
 	    ;; Check remote and local STDERR.
-	    (unless (tramp--test-sshfs-p)
+	    ;; FIXME: tramp-smb.el should implement this.
+	    (unless (or (tramp--test-sshfs-p) (tramp--test-smb-p))
 	      (dolist (local '(nil t))
 		(setq tmp-name (tramp--test-make-temp-name local quoted))
 		(should-not
@@ -5475,30 +5506,32 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 	  kill-buffer-query-functions command proc)
 
       ;; Simple process.
-      (unwind-protect
-	  (with-temp-buffer
-	    (setq command '("cat")
-		  proc
-		  (apply #'start-file-process "test1" (current-buffer) command))
-	    (should (processp proc))
-	    (should (equal (process-status proc) 'run))
-	    (should (equal (process-get proc 'remote-command) command))
-	    (process-send-string proc "foo\n")
-	    (process-send-eof proc)
-	    ;; Read output.
-	    (with-timeout (10 (tramp--test-timeout-handler))
-	      (while (< (- (point-max) (point-min)) (length "foo"))
-		(while (accept-process-output proc 0 nil t))))
-            ;; Some `cat' implementations do not support the `cat -'
-            ;; call.  We skip then.
-            (skip-unless
-             (not
-              (string-match-p (rx "cat: -: input file is output file\n")
-                              (buffer-string))))
-	    (should (string-match-p "foo" (buffer-string))))
+      (unless (tramp--test-smb-p)
+	(unwind-protect
+	    (with-temp-buffer
+	      (setq command '("cat")
+		    proc
+		    (apply
+		     #'start-file-process "test1" (current-buffer) command))
+	      (should (processp proc))
+	      (should (equal (process-status proc) 'run))
+	      (should (equal (process-get proc 'remote-command) command))
+	      (process-send-string proc "foo\n")
+	      (process-send-eof proc)
+	      ;; Read output.
+	      (with-timeout (10 (tramp--test-timeout-handler))
+		(while (< (- (point-max) (point-min)) (length "foo"))
+		  (while (accept-process-output proc 0 nil t))))
+              ;; Some `cat' implementations do not support the `cat -'
+              ;; call.  We skip then.
+              (skip-unless
+               (not
+		(string-match-p (rx "cat: -: input file is output file\n")
+				(buffer-string))))
+	      (should (string-match-p "foo" (buffer-string))))
 
-	;; Cleanup.
-	(ignore-errors (delete-process proc)))
+	  ;; Cleanup.
+	  (ignore-errors (delete-process proc))))
 
       ;; Simple process using a file.
       (unwind-protect
@@ -5512,7 +5545,7 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 	    (should (equal (process-get proc 'remote-command) command))
 	    ;; Read output.
 	    (with-timeout (10 (tramp--test-timeout-handler))
-	      (while (< (- (point-max) (point-min)) (length "foo"))
+	      (while (not (string-match-p "foo" (buffer-string)))
 		(while (accept-process-output proc 0 nil t))))
 	    (should (string-match-p "foo" (buffer-string))))
 
@@ -5522,6 +5555,8 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 	  (delete-file tmp-name)))
 
       ;; Process filter.
+      ;; FIXME: tramp-smb.el should implement this.
+      (unless (tramp--test-smb-p)
       (unwind-protect
 	  (with-temp-buffer
 	    (setq command '("cat")
@@ -5542,7 +5577,7 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
 	    (should (string-match-p "foo" (buffer-string))))
 
 	;; Cleanup.
-	(ignore-errors (delete-process proc)))
+	(ignore-errors (delete-process proc))))
 
       ;; Disabled process filter.  It doesn't work reliable.
       (unless t
@@ -5672,32 +5707,33 @@ If UNSTABLE is non-nil, the test is tagged as `:unstable'."
       (should-not (apply #'make-process nil)) ; Use `apply' to avoid warnings.
 
       ;; Simple process.
-      (unwind-protect
-	  (with-temp-buffer
-	    (setq command '("cat")
-		  proc
-		  (make-process
-		   :name "test1" :buffer (current-buffer) :command command
-		   :file-handler t))
-	    (should (processp proc))
-	    (should (equal (process-status proc) 'run))
-	    (should (equal (process-get proc 'remote-command) command))
-	    (process-send-string proc "foo\n")
-	    (process-send-eof proc)
-	    ;; Read output.
-	    (with-timeout (10 (tramp--test-timeout-handler))
-	      (while (< (- (point-max) (point-min)) (length "foo"))
-		(while (accept-process-output proc 0 nil t))))
-            ;; Some `cat' implementations do not support the `cat -'
-            ;; call.  We skip then.
-            (skip-unless
-             (not
-              (string-match-p (rx "cat: -: input file is output file\n")
-                              (buffer-string))))
-	    (should (string-match-p "foo" (buffer-string))))
+      (unless (tramp--test-smb-p)
+	(unwind-protect
+	    (with-temp-buffer
+	      (setq command '("cat")
+		    proc
+		    (make-process
+		     :name "test1" :buffer (current-buffer) :command command
+		     :file-handler t))
+	      (should (processp proc))
+	      (should (equal (process-status proc) 'run))
+	      (should (equal (process-get proc 'remote-command) command))
+	      (process-send-string proc "foo\n")
+	      (process-send-eof proc)
+	      ;; Read output.
+	      (with-timeout (10 (tramp--test-timeout-handler))
+		(while (< (- (point-max) (point-min)) (length "foo"))
+		  (while (accept-process-output proc 0 nil t))))
+              ;; Some `cat' implementations do not support the `cat -'
+              ;; call.  We skip then.
+              (skip-unless
+               (not
+		(string-match-p (rx "cat: -: input file is output file\n")
+				(buffer-string))))
+	      (should (string-match-p "foo" (buffer-string))))
 
-	;; Cleanup.
-	(ignore-errors (delete-process proc)))
+	  ;; Cleanup.
+	  (ignore-errors (delete-process proc))))
 
       ;; Simple process using a file.
       (unwind-protect
@@ -5713,7 +5749,7 @@ If UNSTABLE is non-nil, the test is tagged as `:unstable'."
 	    (should (equal (process-get proc 'remote-command) command))
 	    ;; Read output.
 	    (with-timeout (10 (tramp--test-timeout-handler))
-	      (while (< (- (point-max) (point-min)) (length "foo"))
+	      (while (not (string-match-p "foo" (buffer-string)))
 		(while (accept-process-output proc 0 nil t))))
 	    (should (string-match-p "foo" (buffer-string))))
 
@@ -5723,6 +5759,8 @@ If UNSTABLE is non-nil, the test is tagged as `:unstable'."
 	  (delete-file tmp-name)))
 
       ;; Process filter.
+      ;; FIXME: tramp-smb.el should implement this.
+      (unless (tramp--test-smb-p)
       (unwind-protect
 	  (with-temp-buffer
 	    (setq command '("cat")
@@ -5745,7 +5783,7 @@ If UNSTABLE is non-nil, the test is tagged as `:unstable'."
 	    (should (string-match-p "foo" (buffer-string))))
 
 	;; Cleanup.
-	(ignore-errors (delete-process proc)))
+	(ignore-errors (delete-process proc))))
 
       ;; Disabled process filter.  It doesn't work reliable.
       (unless t
@@ -5801,7 +5839,9 @@ If UNSTABLE is non-nil, the test is tagged as `:unstable'."
 
       ;; Process with stderr buffer.  "telnet" does not cooperate with
       ;; three processes.
-      (unless (or (tramp--test-telnet-p) (tramp-direct-async-process-p))
+      ;; FIXME: tramp-smb.el should implement this.
+      (unless (or (tramp--test-telnet-p) (tramp--test-smb-p)
+		  (tramp-direct-async-process-p))
 	(let ((stderr (generate-new-buffer "*stderr*")))
 	  (unwind-protect
 	      (with-temp-buffer
@@ -5833,7 +5873,8 @@ If UNSTABLE is non-nil, the test is tagged as `:unstable'."
 	    (ignore-errors (kill-buffer stderr)))))
 
       ;; Process with stderr file.
-      (unless (tramp-direct-async-process-p)
+      ;; FIXME: tramp-smb.el should implement this.
+      (unless (or (tramp--test-smb-p) (tramp-direct-async-process-p))
 	(unwind-protect
 	    (with-temp-buffer
 	      (setq command '("cat" "/does-not-exist")
@@ -6093,9 +6134,11 @@ If UNSTABLE is non-nil, the test is tagged as `:unstable'."
 INPUT, if non-nil, is a string sent to the process."
   (let ((proc (async-shell-command command output-buffer error-buffer))
 	(delete-exited-processes t))
-    (should (equal (process-get proc 'remote-command)
-		   (with-connection-local-variables
-		    `(,shell-file-name ,shell-command-switch ,command))))
+    ;; `tramp-smb-handle-shell-command' modifies the command.
+    (unless (tramp--test-smb-p)
+      (should (equal (process-get proc 'remote-command)
+		     (with-connection-local-variables
+		      `(,shell-file-name ,shell-command-switch ,command)))))
     (cl-letf (((symbol-function #'shell-command-sentinel) #'ignore))
       (when (stringp input)
 	(process-send-string proc input))
@@ -6139,7 +6182,9 @@ INPUT, if non-nil, is a string sent to the process."
 	      (should (file-exists-p tmp-name))
 	      (funcall
 	       this-shell-command
-	       (format "ls %s" (file-name-nondirectory tmp-name))
+	       (format
+		(if (tramp--test-smb-p) "(ls %s).Name" "ls %s")
+		(file-name-nondirectory tmp-name))
 	       (current-buffer))
 	      ;; "ls" could produce colorized output.
 	      (goto-char (point-min))
@@ -6154,7 +6199,8 @@ INPUT, if non-nil, is a string sent to the process."
 	  (ignore-errors (delete-file tmp-name)))
 
 	;; Test `{async-}shell-command' with error buffer.
-	(unless (tramp-direct-async-process-p)
+	;; FIXME: tramp-smb.el should implement this.
+	(unless (or (tramp--test-smb-p) (tramp-direct-async-process-p))
 	  (let ((stderr (generate-new-buffer "*stderr*")))
 	    (unwind-protect
 		(with-temp-buffer
@@ -6170,7 +6216,8 @@ INPUT, if non-nil, is a string sent to the process."
 	      (ignore-errors (kill-buffer stderr))))))
 
       ;; Test sending string to `async-shell-command'.
-      (when (tramp--test-asynchronous-processes-p)
+      (when (and (not (tramp--test-smb-p))
+		 (tramp--test-asynchronous-processes-p))
 	(unwind-protect
 	    (with-temp-buffer
 	      (write-region "foo" nil tmp-name)
@@ -6550,6 +6597,8 @@ INPUT, if non-nil, is a string sent to the process."
   :tags '(:expensive-test :tramp-asynchronous-processes)
   (skip-unless (tramp--test-enabled))
   (skip-unless (tramp--test-supports-processes-p))
+  ;; FIXME: Make it work despite if ~/.emacs_powershell.
+  (skip-unless (not (tramp--test-smb-p)))
 
   (let ((default-directory ert-remote-temporary-file-directory)
 	explicit-shell-file-name kill-buffer-query-functions
@@ -7552,13 +7601,13 @@ This requires restrictions of file name syntax."
 (defun tramp--test-supports-processes-p ()
   "Return whether the method under test supports external processes."
   (unless (tramp--test-crypt-p)
-    ;; We use it to enable/disable tests in a given test run, for
-    ;; example for remote processes on MS Windows.
-    (if (tramp-connection-property-p
-         tramp-test-vec "tramp--test-supports-processes-p")
-	(tramp-get-connection-property
-	 tramp-test-vec "tramp--test-supports-processes-p")
-      (or (tramp--test-adb-p) (tramp--test-sh-p) (tramp--test-sshfs-p)))))
+    (or (tramp--test-adb-p) (tramp--test-sh-p) (tramp--test-sshfs-p)
+	(and (tramp--test-smb-p)
+	     (file-writable-p
+	      (file-name-concat
+	       (file-remote-p ert-remote-temporary-file-directory)
+	       ;; We check a directory on the "ADMIN$" share.
+	       "ADMIN$" "Boot"))))))
 
 (defun tramp--test-supports-set-file-modes-p ()
   "Return whether the method under test supports setting file modes."
@@ -7728,7 +7777,11 @@ This requires restrictions of file name syntax."
 		;; `default-directory' with special characters.  See
 		;; Bug#53846.
 		(when (and (tramp--test-expensive-test-p)
-			   (tramp--test-supports-processes-p))
+			   (tramp--test-supports-processes-p)
+			   ;; FIXME: tramp-smb.el should implement this.
+			   (not (and (tramp--test-smb-p)
+				     (string-match-p
+				      (rx (or (any "[$") (not ascii))) file1))))
 		  (let ((default-directory file1))
 		    (dolist (this-shell-command
 			     (append
@@ -7988,6 +8041,7 @@ process sentinels.  They shall not disturb each other."
   (skip-unless (not (tramp--test-telnet-p)))
   (skip-unless (not (tramp--test-box-p)))
   (skip-unless (not (tramp--test-windows-nt-p)))
+  (skip-unless (not (tramp--test-smb-p)))
 
   (with-timeout
       (tramp--test-asynchronous-requests-timeout (tramp--test-timeout-handler))
@@ -8912,7 +8966,10 @@ Since it unloads Tramp, it shall be the last test to run."
   (require 'tramp)
   (require 'tramp-archive)
   (should (featurep 'tramp))
-  (should (featurep 'tramp-archive)))
+  (should (featurep 'tramp-archive))
+
+  ;; Disabled further tests.
+  (setq tramp--test-enabled-checked '(t)))
 
 (defun tramp-test-all (&optional interactive)
   "Run all tests for \\[tramp].
@@ -8944,6 +9001,11 @@ If INTERACTIVE is non-nil, the tests are run interactively."
 ;; * Implement `tramp-test31-interrupt-process' and
 ;;   `tramp-test31-signal-process' for "adb", "sshfs" and for direct
 ;;   async processes.  Check, why they don't run stable.
+;; * Fix the limitations for "smb" in `tramp-test28-process-file',
+;;   `tramp-test29-start-file-process', `tramp-test30-make-process',
+;;   `tramp-test32-shell-command',
+;;   `tramp-test34-explicit-shell-file-name' and
+;;   `tramp--test-check-files'.
 ;; * Check, why `tramp-test45-asynchronous-requests' often fails.  The
 ;;   famous reentrant error?
 ;; * Check, why direct async processes do not work for
